Fixed z-index

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -378,7 +378,7 @@ section {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        z-index: 5;
+        z-index: 1001;
 
         display: none;
 
